# swpp-2023-project-team-13

./: .gitignore
backend/: .env.test  Dockerfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/.github/workflows/: format.yml  test.yml
backend/backend/: settings.py  urls.py
backend/backend/auth/serializer/: custom_token_serializer.py
backend/backend/auth/views/: views.py
backend/backend/auth_jwt/serializer/: custom_token_serializer.py
backend/backend/auth_jwt/views/: views.py
backend/backend/user/models/: user.py
backend/backend/user/serializers/: user_serializer.py
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  guards.ts  token.guard.ts
backend/src/auth/strategies/: access.token.strategy.ts  local.strategy.ts  refresh.token.strategy.ts
backend/src/core/: core.module.ts  getEnvFilePath.ts  logger.middleware.ts  ormconfig.ts  s3Image.service.ts  swagger.ts  user-request.ts
backend/src/core/models/: base.entity.ts
backend/src/coverage/: clover.xml  coverage-final.json  lcov.info
backend/src/coverage/lcov-report/: index.html
backend/src/review/: ml-remote.ts  review.controller.ts  review.module.ts  review.service.ts
backend/src/review/models/: image.entity.ts  restaurant.entity.ts  review.entity.ts
backend/src/review/repositories/: image.repository.ts  restaurant.repository.ts  review.repository.ts
backend/src/test/: utils.ts
backend/src/user/: custom-query.command.ts  user.controller.ts  user.module.ts  user.service.ts
frontend/: build.gradle.kts  (+2 more)
(+223 files in other folders)
