[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["eldpswp99 <nrg1392@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
black = "^23.9.1"
djangorestframework-simplejwt = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
